# Palettize-extract

./: LICENSE  README.md  palettize-extract.cabal
app/: Main.hs
src/: Lib.hs
