name:                palettize-extract
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/CharlesHD/palettize-extract#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Huyghues-Despointes
maintainer:          charleshdespointes@gmail.com
copyright:           Copyright (c) 2016 Charles Huyghues-Despointes
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       JuicyPixels >= 3.2.7
                     , base >= 4.7 && < 5
  default-language:    Haskell2010

executable palettize-extract
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       JuicyPixels >= 3.2.7
                     , base
                     , palettize-extract
  default-language:    Haskell2010

test-suite palettize-extract-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       JuicyPixels >= 3.2.7
                     , base
                     , palettize-extract
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CharlesHD/palettize-extract
